--- a/app/test_led/Makefile
+++ b/app/test_led/Makefile
@@ -1,7 +1,7 @@
 #KERN_SRC := /home/z/WORK/Linux_Digilent/linux-digilent-3.6-digilent-13.01
 #KERN_SRC := /home/user/work/zed/linux
-obj-m := myled.o
-all:
+#obj-m := myled.o
+#all:
 	make -C $(KERN_SRC)   M=`pwd` modules
 clean:
 	make -C $(KERN_SRC)   M=`pwd=` clean
